--- a/Project1Portfolio/Project1Portfolio.csproj
+++ b/Project1Portfolio/Project1Portfolio.csproj
@@ -179,6 +179,9 @@
     <Compile Include="Models\Skill.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SocialMedia.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -522,6 +525,7 @@
     <Content Include="Views\Default\PartialExperience.cshtml" />
     <Content Include="Views\Default\PartialSkills.cshtml" />
     <Content Include="Views\Default\PartialScript.cshtml" />
+    <Content Include="Views\Default\PartialSocialMedia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
