--- a/Project1Portfolio/Project1Portfolio.csproj
+++ b/Project1Portfolio/Project1Portfolio.csproj
@@ -130,6 +130,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\EducationController.cs" />
     <Compile Include="Controllers\ExperienceController.cs" />
@@ -526,6 +527,9 @@
     <Content Include="Views\Default\PartialSkills.cshtml" />
     <Content Include="Views\Default\PartialScript.cshtml" />
     <Content Include="Views\Default\PartialSocialMedia.cshtml" />
+    <Content Include="Views\Contact\PartialContactSideBar.cshtml" />
+    <Content Include="Views\Contact\PartialContactAdress.cshtml" />
+    <Content Include="Views\Contact\PartialContactLocation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
