--- a/Project1Portfolio/Project1Portfolio.csproj
+++ b/Project1Portfolio/Project1Portfolio.csproj
@@ -171,6 +171,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\Portfolio.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Profile.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -530,6 +533,9 @@
     <Content Include="Views\Contact\PartialContactSideBar.cshtml" />
     <Content Include="Views\Contact\PartialContactAdress.cshtml" />
     <Content Include="Views\Contact\PartialContactLocation.cshtml" />
+    <Content Include="Views\Default\PartialTestimonial.cshtml" />
+    <Content Include="Views\Default\PartialPortfolio.cshtml" />
+    <Content Include="Views\Default\PartialService.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
